Added cleanup target

--- a/Presentation/Makefile
+++ b/Presentation/Makefile
@@ -15,6 +15,15 @@ TARGET=01-intro.pdf
 
 all:  $(TARGET)
 
+clean: 
+	rm -f *.aux
+	rm -f *.vrb
+	rm -f *.snm
+	rm -f *.log
+	rm -f *.out
+	rm -f *.toc
+	rm -f *.nav
+
 bib: programm.aux
 	bibtex8 -s programm.aux
 
