--- a/sam-solutions/Makefile
+++ b/sam-solutions/Makefile
@@ -1,7 +1,21 @@
 
 HTML=README.html Linux_QA_program.html
+PDF=01_Intro_to_linux.pdf
+OUTDIR=out
+COMMON=linux-qa-common.tex
 
-all: $(HTML)
+all: $(HTML) $(PDF)
 
 %.html: %.md
 	markdown $< >$@
+
+%.pdf: %.tex $(OUTDIR) $(COMMON)
+	pdflatex -output-directory=$(OUTDIR) -output-format=pdf $<
+	pdflatex -output-directory=$(OUTDIR) -output-format=pdf $<
+	cp -v "$(OUTDIR)/$@" .
+
+$(OUTDIR):
+	mkdir -pv $(OUTDIR)
+
+clean: 
+	rm -rvf $(HTML) $(OUTDIR)
