[SS] linux architecture and history to lection 01

--- a/sam-solutions/Makefile
+++ b/sam-solutions/Makefile
@@ -9,7 +9,7 @@ all: $(HTML) $(PDF)
 %.html: %.md
 	markdown $< >$@
 
-%.pdf: %.tex $(OUTDIR) $(COMMON)
+%.pdf: %.tex $(OUTDIR) $(COMMON) *.png
 	pdflatex -output-directory=$(OUTDIR) -output-format=pdf $<
 	pdflatex -output-directory=$(OUTDIR) -output-format=pdf $<
 	cp -v "$(OUTDIR)/$@" .
