[SS] shell completed

--- a/sam-solutions/Makefile
+++ b/sam-solutions/Makefile
@@ -10,7 +10,7 @@ all: $(HTML) $(PDF)
 	markdown $< >$@
 
 %.pdf: %.tex $(OUTDIR) $(COMMON) clipart/*.png clipart/*.jpg samples/*
-	#pdflatex -mktex=pk -output-directory=$(OUTDIR) -output-format=pdf $<
+	xelatex -mktex=pk -output-directory=$(OUTDIR) -output-format=pdf $<
 	xelatex -mktex=pk -output-directory=$(OUTDIR) -output-format=pdf $<
 	cp -v "$(OUTDIR)/$@" .
 
