[SS] add depends processing

--- a/sam-solutions/Makefile
+++ b/sam-solutions/Makefile
@@ -9,7 +9,9 @@ all: $(HTML) $(PDF)
 %.html: %.md
 	markdown $< >$@
 
-%.pdf: %.tex $(OUTDIR) $(COMMON) clipart/*.png clipart/*.jpg samples/*
+-include .depend
+
+%.pdf: %.tex $(OUTDIR) $(COMMON) 
 	xelatex -mktex=pk -output-directory=$(OUTDIR) -output-format=pdf $<
 	xelatex -mktex=pk -output-directory=$(OUTDIR) -output-format=pdf $<
 	cp -v "$(OUTDIR)/$@" .
@@ -18,4 +20,15 @@ $(OUTDIR):
 	mkdir -pv $(OUTDIR)
 
 clean: 
-	rm -rvf $(HTML) $(OUTDIR)
+	rm -rvf $(HTML) $(OUTDIR) .depend
+
+.depend: clipart/*.png samples/* *.tex
+	-@rm $@
+	for file in clipart/*.png clipart/*.jpg samples/*; \
+	do \
+	  name=$$file;\
+	  echo $$file|grep -q "\.png" && name=`basename $$file .png`; export name;\
+	  grep -l "$$name" *.tex| xargs -n 1 -I{} sh -c "echo '`basename {} .tex`.pdf: $$file\n'>>$@";  \
+	done
+
+
