--- a/sam-solutions/Makefile
+++ b/sam-solutions/Makefile
@@ -3,7 +3,8 @@ HTML=README.html Linux_QA_program.html
 PDF= 01_Intro_to_linux.pdf \
      02_Bourne_shell.pdf \
      03_Filesystem_intro.pdf \
-     04_Text_processing.pdf
+     04_Text_processing.pdf \
+     05_Filesystem_access_rights.pdf
 
 OUTDIR=out
 COMMON=linux-qa-common.tex
