Added --no-as-needed to example to aoid optimizations in different distros.

--- a/epam/examples/make/linking/Makefile
+++ b/epam/examples/make/linking/Makefile
@@ -2,7 +2,7 @@ LDFLAGSLIB= -shared
 CFLAGSLIB= -fPIC
 
 CFLAGS = -I.
-LDFLAGS = -L. -Wl,-rpath,.
+LDFLAGS = -L. -Wl,-rpath,. -Wl,--no-as-needed
 
 LIBS= libtesta.so libtestb.so
 
