Some amendments to segfault

--- a/epam/examples/gdb/Makefile
+++ b/epam/examples/gdb/Makefile
@@ -1,7 +1,9 @@
 CFLAGS = -g -Wall 
+.PHONY: all
+all: counter segfault
+
 counter: counter.c
 
 segfault: segfault.c
+	gcc -g -o segfault segfault.c
 
-.PHONY: all
-all: counter segfault
