Added backtrace example

--- a/epam/examples/gdb/Makefile
+++ b/epam/examples/gdb/Makefile
@@ -1,9 +1,11 @@
 CFLAGS = -g -Wall 
 .PHONY: all
-all: counter segfault
+all: counter segfault backtrace
 
 counter: counter.c
 
 segfault: segfault.c
 	gcc -g -o segfault segfault.c
 
+backtrace: backtrace.c
+	gcc -g -rdynamic -o $@ $<
