--- a/epam/examples/gdb/Makefile
+++ b/epam/examples/gdb/Makefile
@@ -1,9 +1,14 @@
 CFLAGS = -g -Wall 
-.PHONY: all
+.PHONY: all dist
 all: counter segfault
 
 counter: counter.c
 
 segfault: segfault.c
 	gcc -g -o segfault segfault.c
+
+dist: counter.c segfault.c Makefile
+	mkdir -p gdb-example
+	cp $^ gdb-example/
+	tar zcvf gdb-example.tgz gdb-example/*
 
