Examples for valgrind

--- a/epam/examples/gdb/Makefile
+++ b/epam/examples/gdb/Makefile
@@ -1,11 +1,16 @@
-CFLAGS = -g -Wall 
+CFLAGS = -g 
 .PHONY: all
-all: counter segfault backtrace
+all: counter.dbg segfault.dbg backtrace.dbg
 
 counter: counter.c
 
+%.dbg: %
+	objcopy --only-keep-debug $< $@
+	strip -g $<
+	objcopy --add-gnu-debuglink $@ $<
+
 segfault: segfault.c
-	gcc -g -o segfault segfault.c
+	gcc -Wall -g -o segfault segfault.c
 
 backtrace: backtrace.c
 	gcc -g -rdynamic -o $@ $<
