Reverted Makefile to original version

--- a/epam/examples/gdb/Makefile
+++ b/epam/examples/gdb/Makefile
@@ -1,16 +1,11 @@
-CFLAGS = -g 
+CFLAGS = -g -Wall 
 .PHONY: all
-all: counter.dbg segfault.dbg backtrace.dbg
+all: counter segfault backtrace
 
 counter: counter.c
 
-%.dbg: %
-	objcopy --only-keep-debug $< $@
-	strip -g $<
-	objcopy --add-gnu-debuglink $@ $<
-
 segfault: segfault.c
-	gcc -Wall -g -o segfault segfault.c
+	gcc -g -o segfault segfault.c
 
 backtrace: backtrace.c
 	gcc -g -rdynamic -o $@ $<
