Reorganized examples for debug section

--- a/epam/examples/debug/gdb/Makefile
+++ b/epam/examples/debug/gdb/Makefile
@@ -1,11 +1,8 @@
 CFLAGS = -g -Wall 
 .PHONY: all
-all: counter segfault backtrace
+all: counter segfault
 
 counter: counter.c
 
 segfault: segfault.c
 	gcc -g -o segfault segfault.c
-
-backtrace: backtrace.c
-	gcc -g -rdynamic -o $@ $<
