--- a/epam/Presentation/Makefile
+++ b/epam/Presentation/Makefile
@@ -19,8 +19,9 @@ TARGET += 18-profile.pdf
 TARGET += 19-packaging.pdf
 TARGET += 20-version_control.pdf
 
-TARGET += epam-Linux_courses_handbook.pdf
+TARGET_PPTX=$(TARGET:.pdf=.pptx)
 
+TARGET += epam-Linux_courses_handbook.pdf
 TARGET_XML=$(TARGET:.pdf=.xml)
 
 LATEXML=latexml
@@ -28,7 +29,9 @@ LATEXML_PARAMS=--inputencoding=utf8 --preload=beamer.cls --preload=t2aenc.def --
 XMLWF=xmlwf
 XMLWF_PARAMS=
 
-.PHONY: all xml tex clean
+LATEXML2OPENXML=java -jar latexml2openxml-0.0.1-SNAPSHOT-jar-with-dependencies.jar
+
+.PHONY: all xml pptx tex clean
 
 %.dvi: %.tex
 	latex $<
@@ -45,14 +48,19 @@ XMLWF_PARAMS=
 	$(LATEXML) $(LATEXML_PARAMS) --destination=$@ $< &> $@.log
 	$(XMLWF) $(XMLWF_PARAMS) $@
 
+%.pptx: %.xml
+	$(LATEXML2OPENXML) --slideshow=$@ $< &> $@.log
+
 tex: $(TARGET)
 
 xml: $(TARGET_XML)
 
+pptx: $(TARGET_PPTX)
+
 bib: programm.aux
 	bibtex8 -s programm.aux
 
-all: tex xml
+all: tex pptx
 
 clean: 
 	@rm -f *.aux
@@ -62,5 +70,6 @@ clean:
 	@rm -f *.out
 	@rm -f *.toc
 	@rm -f *.nav
+	@rm -f $(TARGET_PPTX)
 	@rm -f $(TARGET_XML)
 	@rm -f $(TARGET)
