--- a/epam/examples/debug/valgrind/Makefile
+++ b/epam/examples/debug/valgrind/Makefile
@@ -1,5 +1,5 @@
 CFLAGS = -g -O0
-TARGETS = inv_ptr leaks huge_size inv_type uninit_var
+TARGETS = inv_ptr leaks huge_size inv_type uninit_var dbl_free uninit_access
 
 all: $(TARGETS)
 
