elf lecture moved to 04

--- a/epam/DevelopmentToolchain/Makefile
+++ b/epam/DevelopmentToolchain/Makefile
@@ -1,6 +1,7 @@
 TARGET  = 01-gcc_intro.pdf
 TARGET += 02-linker_intro.pdf
-TARGET += 03-elf.pdf
+TARGET += 03-make.pdf
+TARGET += 04-elf.pdf
 
 #TARGET += epam-Linux_courses_handbook.pdf
 
