Fix of Makefile

--- a/epam/examples/debug/gdb/Makefile
+++ b/epam/examples/debug/gdb/Makefile
@@ -3,17 +3,15 @@ CFLAGS = -g -Wall
 all: counter segfault
 
 .PHONY: all dist
-all: counter segfault backtrace
+all: counter segfault
 
 counter: counter.c
 
 segfault: segfault.c
 	gcc -g -o segfault segfault.c
 
-dist: counter.c segfault.c Makefile backtrace.c
+dist: counter.c segfault.c Makefile
 	mkdir -p gdb-example
 	cp $^ gdb-example/
 	tar zcvf gdb-example.tgz gdb-example/*
 
-backtrace: backtrace.c
-	gcc -g -rdynamic -o $@ $<
