Some modification for gdb

--- a/epam/examples/debug/gdb/Makefile
+++ b/epam/examples/debug/gdb/Makefile
@@ -14,4 +14,5 @@ dist: counter.c segfault.c Makefile
 	mkdir -p gdb-example
 	cp $^ gdb-example/
 	tar zcvf gdb-example.tgz gdb-example/*
-
+clean:
+	rm -rf counter segfault
