Modified profiling lecture by Y.Rybak <Yauhen_Rybak@epam.com>

--- a/epam/DevelopmentToolchain/Makefile
+++ b/epam/DevelopmentToolchain/Makefile
@@ -5,6 +5,7 @@ TARGET += 04-elf.pdf
 TARGET += 05-debug.pdf
 TARGET += 06-debug.pdf
 TARGET += 07-valgrind.pdf
+TARGET += 08-profile.pdf
 
 #TARGET += epam-Linux_courses_handbook.pdf
 
