--- a/epam/DevelopmentToolchain/Makefile
+++ b/epam/DevelopmentToolchain/Makefile
@@ -6,6 +6,9 @@ TARGET += 05-debug.pdf
 TARGET += 06-debug.pdf
 TARGET += 07-valgrind.pdf
 TARGET += 08-profile.pdf
+TARGET += 09-gcov.pdf
+TARGET += 10-doxygen.pdf
+TARGET += 12-packaging.pdf
 
 #TARGET += epam-Linux_courses_handbook.pdf
 
