Added init systems overview
+minor modifications

--- a/epam/LinuxEssentials/Makefile
+++ b/epam/LinuxEssentials/Makefile
@@ -26,6 +26,8 @@ LATEXML2OPENXML=java -jar latexml2openxml-0.0.1-SNAPSHOT-jar-with-dependencies.j
 
 %.pdf: %.tex
 	pdflatex -interaction=nonstopmode $<
+	pdflatex -interaction=nonstopmode $<
+	pdflatex -interaction=nonstopmode $<
 
 %.xml: %.tex
 	$(LATEXML) $(LATEXML_PARAMS) --destination=$@ $< &> $@.log
