--- a/epam/LinuxEssentials/Makefile
+++ b/epam/LinuxEssentials/Makefile
@@ -4,8 +4,9 @@ TARGET += 03-bash_and_process.pdf
 TARGET += 04-commands.pdf
 TARGET += 05-rpm.pdf
 TARGET += 06-users.pdf
-TARGET += 07-networking.pdf
-TARGET += 08-disk.pdf
+TARGET += 07-disk.pdf
+TARGET += 08-1-networking.pdf
+TARGET += 08-2-networking.pdf
 
 .PHONY: all tex clean
 
